
0.1.7 - not released (will be released as 0.1.8)
------------------------------------------------------------------------------

Bug Fixes

 - Issue #18 - Option --passphrase on admin plugin broken
 - Issue #19 - Include IUS End User Agreement and GPG Key in repo
 

0.1.6 - Jun 20, 2011 
------------------------------------------------------------------------------

Bug Fixes

 - Issue #12 - ircbot responds to msg's starting with '..'


Feature Enhancements

 + Issue #15 - Admin plugin for syncing repos from MF


0.1.4 - Jun 10, 2011 
------------------------------------------------------------------------------

Misc Changes:

 + Issue #9 - Break out Launchpad functionality to its own plugin. 
 + Issue #10 - irc_commands dict is defined in a namespace __init__.py


0.1.2 - Jun 07, 2011 
------------------------------------------------------------------------------

FEATURE ENHANCEMENTS:

 + Added new hook ircbot_parsemsg_hook, all incoming msg's are passed to these
   hooks
 + Added bug-info (.bug) command
 + Added --release, --package, --filter features to version-tracker plugin.


BUG FIXES:

 - Added new hook keepalive_process_hook to send regular ping responses to 
   the server.  Keeps bot from being disconnected when no activity is in the
   channel.
 - Resolved Issue #1 ircbot fails to reconnect (unhandled socket.error 
   exception).  Also added a lot of error handling in lib/ircbot.py. 
 - Resolved Issue #6: IRCBot logs socket.error: [Errno 32] Broken pipe far too 
   often
