@@ -18,6 +18,9 @@ repo_base_path = ~/ius-repo/
 ### Binary paths
 rpm_binpath = /bin/rpm
 rsync_binpath = /usr/bin/rsync
+createrepo_binpath = /usr/bin/createrepo
+yumarch_binpath = /usr/bin/yum-arch
+repoview_binpath = /usr/bin/repoview
 
 # This is the remote user@host:/path/to/dir to use to rsync to.  Note that
 # this will create the directory 'repo_base_path' (whatever that is set to)
