@@ -30,6 +30,8 @@ admin.config['remote_rsync_path'] = '~/ius-repo'
 admin.config['rpm_binpath'] = '/bin/rpm'
 admin.config['rsync_binpath'] = '/usr/bin/rsync'
 admin.config['createrepo_binpath'] = '/usr/bin/createrepo'
+admin.config['yumarch_binpath'] = '/usr/bin/yum-arch'
+admin.config['repoview_binpath'] = '/usr/bin/repoview'
 admin.config['gpg_passphrase'] = ''
 admin.config['announce_email'] = 'announce@example.com'
 admin.config['smtp_from'] = 'noreply@example.com'
